--- a/style.sass
+++ b/style.sass
@@ -1,3 +1,12 @@
-body, html
+
+html, body 
+  overflow: hidden
   width: 100%
   height: 100%
+  margin: 0
+  padding: 0
+
+#renderCanvas 
+  width: 100%
+  height: 100%
+  touch-action: none
