--- a/style.sass
+++ b/style.sass
@@ -6,7 +6,9 @@ html, body
   margin: 0
   padding: 0
 
-#renderCanvas 
+#game-wrapper 
+  display: block
+  border: 1px solid purple
   width: 100%
   height: 100%
   touch-action: none
